tests/ui/parser/attribute/attr-binary-expr-ambigous.stderr
error: ambiguous outer attributes
  --> $DIR/attr-binary-expr-ambigous.rs:6:17
   |
LL |     let mut x = #[deprecated] 1 + 2;
   |                 ^^^^^^^^^^^^^^^^^^^
   |
help: wrap the expression in parentheses
   |
LL |     let mut x = (#[deprecated] 1) + 2;
   |                 +               +

error: ambiguous outer attributes
  --> $DIR/attr-binary-expr-ambigous.rs:8:5
   |
LL |     #[deprecated] x = 4;
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: wrap the expression in parentheses
   |
LL |     (#[deprecated] x) = 4;
   |     +               +

error: ambiguous outer attributes
  --> $DIR/attr-binary-expr-ambigous.rs:10:9
   |
LL |     x = #[deprecated] 5 as i32;
   |         ^^^^^^^^^^^^^^^^^^^^^^
   |
help: wrap the expression in parentheses
   |
LL |     x = (#[deprecated] 5) as i32;
   |         +               +

error: ambiguous outer attributes
  --> $DIR/attr-binary-expr-ambigous.rs:12:14
   |
LL |     let _r = #[deprecated] 1..6;
   |              ^^^^^^^^^^^^^^^^^^
   |
help: wrap the expression in parentheses
   |
LL |     let _r = (#[deprecated] 1)..6;
   |              +               +

error: aborting due to 4 previous errors

